# handlers/accounts.go
@@ -19,6 +19,16 @@ type SyncKeyCountRequest struct {
 	Address flow.Address `json:"address"`
 }
 
+type GraduateAccountRequest struct {
+	UserPublicKey string `json:"userPublicKey"`
+}
+
+type GraduateAccountResponse struct {
+	Address string               `json:"address"`
+	Type    accounts.AccountType `json:"type"`
+	Status  string               `json:"status"`
+}
+
 // NewAccounts initiates a new accounts server.
 func NewAccounts(service accounts.Service) *Accounts {
 	return &Accounts{service}
@@ -48,6 +58,18 @@ func (s *Accounts) Details() http.Handler {
 	return http.HandlerFunc(s.DetailsFunc)
 }
 
-func (s *Accounts) RotateKey() http.Handler {
-	return http.HandlerFunc(s.RotateKeyFunc)
+func (s *Accounts) ActivateArtist() http.Handler {
+	return http.HandlerFunc(s.ActivateArtistFunc)
+}
+
+func (s *Accounts) EnableCommunityPool() http.Handler {
+	return http.HandlerFunc(s.EnableCommunityPoolFunc)
+}
+
+func (s *Accounts) GraduateToSelfCustody() http.Handler {
+	return http.HandlerFunc(s.GraduateToSelfCustodyFunc)
+}
+
+func (s *Accounts) ReconcileAccount() http.Handler {
+	return http.HandlerFunc(s.ReconcileAccountFunc)
 }
